Fix backdrop not filling up the entire screen on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,7 @@
   display:flex;
   flex-direction:column;
   
+  min-height: 100lvh;
 }
 
 /* MainContentBackdrop Backgrounds */
